--- a/static/style.css
+++ b/static/style.css
@@ -85,6 +85,12 @@ body {
     border: 1px solid #e0e0e0;
 }
 
+.error-notification {
+    background-color: darkred;
+    padding: 20px;
+    border: 1px solid white;
+}
+
 .screen-container {
     background-color: #f8f8f8;
     margin-bottom: 20px;
